--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "mozilla-chipher",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "next": "15.4.1",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.1"
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "typescript": "^5.8.3",
+    "@antfu/eslint-config": "^4.17.0",
     "@types/node": "^20.19.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "eslint": "^9.31.0",
-    "eslint-config-next": "15.4.1",
-    "@eslint/eslintrc": "^3.3.1"
+    "typescript": "^5.8.3"
   }
 }
