--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.25.0",
+    "@clerk/nextjs": "^6.25.1",
+    "@neondatabase/serverless": "^1.0.1",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
+    "@t3-oss/env-core": "^0.13.8",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.83.0",
@@ -20,6 +25,8 @@
     "@trpc/next": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
     "@trpc/server": "^11.4.3",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.3",
     "next": "15.4.1",
     "postcss": "^8.5.6",
     "react": "19.1.0",
