--- a/package.json
+++ b/package.json
@@ -6,43 +6,52 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "db:generate": "drizzle-kit generate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.25.3",
+    "@clerk/nextjs": "^6.26.0",
     "@neondatabase/serverless": "^1.0.1",
-    "@react-three/drei": "^10.5.1",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.6.0",
     "@react-three/fiber": "^9.2.0",
     "@t3-oss/env-core": "^0.13.8",
     "@tailwindcss/postcss": "^4.1.11",
-    "@tanstack/react-form": "^1.14.1",
+    "@tanstack/react-form": "^1.14.2",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.83.0",
     "@trpc/client": "^11.4.3",
     "@trpc/next": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
     "@trpc/server": "^11.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.3",
+    "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0",
-    "zod": "^4.0.5"
+    "zod": "^4.0.10"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.17.0",
-    "@types/node": "^20.19.8",
+    "@antfu/eslint-config": "^4.19.0",
+    "@next/eslint-plugin-next": "^15.4.4",
+    "@types/node": "^20.19.9",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/three": "^0.178.1",
     "eslint": "^9.31.0",
+    "lefthook": "^1.12.2",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3"
   }
 }
