--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.3",
     "lucide-react": "^0.525.0",
+    "nanoid": "^5.1.5",
     "next": "15.4.1",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "svix": "^1.69.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0",
