--- a/lefthook.yml
+++ b/lefthook.yml
@@ -7,7 +7,7 @@ pre-commit:
         - '.next/**'
         - 'src/shadcn/**'
         - 'node_modules/**'
-      run: npm run lint
+      run: bun run lint
       stage_fixed: true
 
     - name: ESLint fix
@@ -16,13 +16,13 @@ pre-commit:
         - '.next/**'
         - 'src/shadcn/**'
         - 'node_modules/**'
-      run: npm run lint:fix
+      run: bun run lint:fix
       stage_fixed: true
 
 pre-push:
   jobs:
     - name: Full ESLint check
-      run: npm run lint
+      run: bun run lint
 
     - name: TypeScript check
-      run: npx tsc --noEmit
+      run: bun tsc --noEmit
